fix: Update popover event handling and increase z-index for better visibility

--- a/web/style/datavzrd.css
+++ b/web/style/datavzrd.css
@@ -357,7 +357,7 @@ footer {
 }
 
 .popover {
-    z-index: 2 !important;
+    z-index: 9999 !important;
 }
 
 .datavzrd-img {
